Switch to jdk v11. Fix spring "Unsupported class file major version 61" org.springframework.web.context.ContextLoader.initWebApplicationContext Context initialization failed 	org.springframework.beans.factory.BeanDefinitionStoreException: Failed to read candidate component class: file [AppConfig.class]; nested exception is org.springframework.core.NestedIOException: ASM ClassReader failed to parse class file - probably due to a new Java class file version that isn't supported yet: file [AppConfig.class]; nested exception is java.lang.IllegalArgumentException: Unsupported class file major version 61